Cacmbios en footer

--- a/src/views/ansiedad_.ejs
+++ b/src/views/ansiedad_.ejs
@@ -57,4 +57,42 @@
       </div>
 
     </body>
+    <footer style="padding:40px 40px">
+      <!--Logo Fun N Skate-->
+               <div style="display:flex; flex-direction:column; text-align: left; padding-left: 30px">
+                  <img class="logo-footer" style="margin:20px 0 30px 0;" src = '/img/Logo_Horizontal.png' alt='Logo'>
+                 <!-- <p style="padding-left: 40px; font-size: 13px; opacity: 0.6">En Por Ti buscamos fomentar el autocuidado de la salud integral.</p>-->
+              </div>
+              
+              <!--Logotipos de redes sociales-->
+              <div class="caja-redes">
+                  <h4 class="titulo-redes" style="padding-top: 30px; margin: -10px; margin-bottom: 10px; font-size: 21px; font-family: Poppins, Nunito, sans-serif;">¡Síguenos!</h4>
+                  <a href="facebook">
+                      <img class="redes" src = '/img/facebook.png' alt='facebook'>
+                  </a>
+                  <a href="instagram">
+                      <img class="redes" src = '/img/insta.png' alt='instagram'>
+                  </a> 
+          
+              </div>
+              <!--Area de suscripción -->
+            
+      
+              <div class="cont-list">
+          
+                  <ul>
+                      <li>
+                          <a href="#sucursal1">Podcast</a>
+                      </li>
+                      <li>
+                          <a href="#sucursal2">Blog</a>
+                      </li>
+                      <li>
+                          <a href="#sucursal3">YouTube</a>
+                      </li>
+                  </ul>
+              </div>
+            
+          
+    </footer>
     </html>
