--- a/src/views/listado.ejs
+++ b/src/views/listado.ejs
@@ -107,10 +107,10 @@
           <div class="caja-redes">
               <h3 class="titulo-redes" style="padding-top: 50px; margin: -40px;">¡Síguenos!</h3>
               <a href="facebook">
-                  <img class="redes" src = '/img/icon-fb.png' alt='facebook'>
+                  <img class="redes" src = '/img/facebook.png' alt='facebook'>
               </a>
               <a href="instagram">
-                  <img class="redes" src = '/img/icon-inst.svg' alt='instagram'>
+                  <img class="redes" src = '/img/insta.png' alt='instagram'>
               </a> 
       
           </div>
