--- a/src/views/respiracion.ejs
+++ b/src/views/respiracion.ejs
@@ -49,3 +49,7 @@ document.querySelector("input[type='number']").addEventListener('change', (event
 })
 
 </script>
+
+<div style="position: absolute; bottom: -260px;">
+    <%- include('./partials/footer') %>
+    </div>
