--- a/src/views/5sentidos.ejs
+++ b/src/views/5sentidos.ejs
@@ -259,28 +259,5 @@
 
 </body>
   <!-- Site footer -->
-  <footer class="site-footer">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-12 col-md-6">
-          <h6>About</h6>
-      <hr>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8 col-sm-6 col-xs-12">
-          <p class="copyright-text">Copyright &copy; 2022 
-       <a href="#">Por Ti</a>.
-          </p>
-        </div>
-
-        <div class="col-md-4 col-sm-6 col-xs-12">
-          <ul class="social-icons">
-            <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-            <li><a class="instagram" href="#"><i class="fa fa-instagram"></i></a></li> 
-          </ul>
-        </div>
-      </div>
-    </div>
-</footer>
+  <%- include('./partials/footer') %>
 </html>
