Se modifico footer y perfil

--- a/src/views/ejercicios.ejs
+++ b/src/views/ejercicios.ejs
@@ -164,7 +164,8 @@
   <h4>Técnica auto-calmante para aliviar la ansiedad.</h4></div></div></a>
    
   <a href="/ejercicios/arteterapia">
-  <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1650503368/Por%20Ti/ejercicios-card6_tslgtr.svg); width: 30%;"><div class="card-ejercicio-text"><h2>Arteterapia</h2><h6>12 min</h6>
+  <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1650503368/Por%20Ti/ejercicios-card6_tslgtr.svg); width: 30%;"><div class="card-ejercicio-text">
+    <h2>Arteterapia</h2><h6>12 min</h6>
         <h4>Expresa tus emociones con arte.</h4></div></div></a>
         
     <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1650503371/Por%20Ti/ejercicios-card7_qguw8x.svg);"><div class="card-ejercicio-text">
