--- a/src/views/perfil.ejs
+++ b/src/views/perfil.ejs
@@ -88,19 +88,34 @@
 
     </div>
     <div class="espacio" style="padding: 25px"></div>
-<div class="ejercicios-perfil" style="margin: 200px, 0">
+<div class="ejercicios-perfil" style="margin: 250px, 0">
 <h2>Ejercicios favoritos</h2>
 <div class="espacio" style="padding: 25px"></div>
+
+<div class="ejercicios-box-cont" style="padding-left: 75px; height: 300px; padding-left: 50px;">
 <div class="ejercicios-top-contenedor">
-    <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1650503364/Por%20Ti/ejercicios-card4_vfqu0z.svg); width:373px;"><div class="card-ejercicio-text"><h2>Imaginación guiada</h2><h6>12 min</h6>
-  <h4>Lorem ipsum dolor sit amet consectetur adipiscing</h4></div></div>
-    
-  <div class="box"><div class="card-ejercicio-text"><h2>Tapping</h2><h6>12 min</h6>
-      <h4>Lorem ipsum dolor sit amet consectetur </h4></div></div>
-    
-      <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1650503368/Por%20Ti/ejercicios-card6_tslgtr.svg); width:373px;"><div class="card-ejercicio-text"><h2>Arteterapia</h2><h6>12 min</h6>
-      <h4>Lorem ipsum dolor sit amet consecteturdipisci</h4></div></div>
-  </div>
+
+        <a href="/ejercicios/respiracion"> <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1655489715/Por%20Ti/Ejercicio-fondo-respiracion2_qnjx2i.png);">
+            <div class="card-ejercicio-text">
+          <h2>Técnicas de respiración</h2><h6>12 min</h6>
+          <div class="h4-card-text"><h4>Reduce el estrés y ansiedad usando la respiración.</h4></div>
+        </div></div>
+        </a>
+
+        <a href="/ejercicios/tapping"><div class="box"><div class="card-ejercicio-text">
+    <h2>Tapping</h2><h6>12 min</h6>
+      <h4>Técnica auto-calmante para armonizar emociones.</h4></div></div>
+    </a>
+
+    <a href="/ejercicios/imaginacion-guiada">
+        <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651019618/Por%20Ti/Imaginacio%CC%81n_guiadaejercicios_oe6tbo.png); width:373px;"><div class="card-ejercicio-text">
+          <h2>Imaginación guiada</h2><h6>12 min</h6>
+          <h4>Visualiza para redirigir tus pensamientos.</h4></div></div>
+        </a>
+
+</div>
+</div>
+
   <div class="espacio" style="padding: 25px"></div>
   <div class="espacio" style="padding: 25px"></div>
   <div class="buttonBanner"><a href="/misejercicios"><button>Ver más ejercicios</button></a></div>
