--- a/src/views/ansiedad_.ejs
+++ b/src/views/ansiedad_.ejs
@@ -60,7 +60,7 @@
     <footer style="padding:40px 40px">
       <!--Logo Fun N Skate-->
                <div style="display:flex; flex-direction:column; text-align: left; padding-left: 30px">
-                  <img class="logo-footer" style="margin:20px 0 30px 0;" src = '/img/Logo_Horizontal.png' alt='Logo'>
+                  <img class="logo-footer" style="0 30px 0;" src = '/img/Logo_Horizontal.png' alt='Logo'>
                  <!-- <p style="padding-left: 40px; font-size: 13px; opacity: 0.6">En Por Ti buscamos fomentar el autocuidado de la salud integral.</p>-->
               </div>
               
