--- a/src/views/respiracion.ejs
+++ b/src/views/respiracion.ejs
@@ -28,7 +28,7 @@
     <section>
         <p>Toma una respiración profunda mientras el círculo se expande. <br>Exhala mientras reduce su tamaño.<br><br></p> 
         <label for="number">Ajustar tiempo: </label>
-        <input style="color: #111425" type="number" id="number" value="10" min="5">
+        <input style="color: #111425" type="number" id="number" value="10" min="5" max="12">
     </section>
 
     <div class="back">
