--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -162,7 +162,7 @@ cursor: pointer;
 
 .site-footer
 {
-background-color:rgb(22, 20, 48);
+background-color:#161430;
 padding:45px 0 20px;
 font-size:15px;
 line-height:24px;
