--- a/src/views/ansiedad_.ejs
+++ b/src/views/ansiedad_.ejs
@@ -41,14 +41,13 @@
           <p>La hoja de registro de ansiedad es una forma de llevar un seguimiento de los momentos en los que se está sintiendo ansiedad, de esta forma detectar oportunidades de mejora y sus causas. 
            <!-- <p>Además si se lleva un proceso de terapia, es una gran herramienta de apoyo para dar seguimiento del tratamiento proporcionado por el terapeuta. -->
             <br>
-            <p>Te compartimos dos archivos descargables que podrás utilizar.</p>
+            <p>Te compartimos un archivo descargable que podrás utilizar.</p>
             </div>
           <br>
         
           <br>
           <div class="pdf">
-            <embed src="/docs/Hoja_ansiedad1.pdf" type="application/pdf" width="420px" height="630px"/>
-            <embed src="/docs/Hoja_ansiedad2.pdf" type="application/pdf" width="420px" height="630px"/>
+            <embed src="/docs/Hoja_ansiedad1.pdf" type="application/pdf" width="450px" height="630px"/>
           </div>
 
   
