--- a/src/views/tapping.ejs
+++ b/src/views/tapping.ejs
@@ -28,7 +28,7 @@
     </div>
 
     <div class="cont">
-        <div class="cont-1" style="margin-left:80px">
+        <div class="cont-1" style="margin-left:80px;">
             <p>Instrucciones:</p>
             <br>
 
@@ -49,10 +49,9 @@
             </div>
 
             <div class="instruccion">
-                <h2>Agrega a la frase "Aunque" + "Emoción negativa" + "Frase positiva". Ej. "Aunque siento ansiedad, aquí y ahora estoy a salvo." <br> Repite la
-                    frase que hayas elegido mientras haces pequeños toques (golpecitos suaves) en los siguiente puntos:</h2>
+                <h2>4. Agrega a la frase "Aunque" + "Emoción negativa" + "Frase positiva". Ej. "Aunque siento ansiedad, aquí y ahora estoy a salvo." <br> Repite la
+                    frase mientras haces pequeños golpecitos suaves en los siguientes puntos:</h2>
                 <ul>
-                    <br>
                     <li>1. Golpetea arriba de las cejas.</li>
                     <li>2. Golpetea por debajo de los ojos.</li>
                     <li>3. Golpetea a un costado de los ojos.</li>
@@ -66,7 +65,7 @@
 
     <div class="cont-2">
             <div class="short">
-            <iframe width="500" height="700" src="https://www.youtube.com/embed/jMOE0zazVMs" 
+            <iframe width="500" height="750" src="https://www.youtube.com/embed/jMOE0zazVMs" 
             title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write;
             encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
