--- a/src/public/css/arteterapia.css
+++ b/src/public/css/arteterapia.css
@@ -26,7 +26,7 @@
   
   *body{
     height: 100%;
-    background: linear-gradient(rgba(40, 37, 89), #111425);
+    background: linear-gradient(#282559, #111425);
   }
   
   .hero-section{
@@ -161,7 +161,7 @@ p
           margin: 0 auto;
           padding: 15px;
           width:  16em;
-          background-color: rgb(254, 223, 200);
+          background-color: #fedfc8;
           color: rgb(65, 64, 105);
           text-align: center;
           margin-bottom: 40px;
