Se corrigio jiin shin tsu

--- a/src/views/ejercicios.ejs
+++ b/src/views/ejercicios.ejs
@@ -174,7 +174,7 @@
     <h2>Arteterapia</h2><h6>12 min</h6>
         <h4>Expresa tus emociones con arte.</h4></div></div></a>
         
-    <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1661449020/Por%20Ti/jin_shin_cgpbgt.png);"><div class="card-ejercicio-text">
+    <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1661449020/Por%20Ti/jin_shin_cgpbgt.png); width: 30%;"><div class="card-ejercicio-text">
       <h2>Jin Shin Jyutsu</h2><h6>12 min</h6>
         <h4>Técnica auto-calmante para armonizar emociones.</h4></div>
     </div>
