Se modifico video en tapping

--- a/src/views/tapping.ejs
+++ b/src/views/tapping.ejs
@@ -65,7 +65,7 @@
 
     <div class="cont-2">
             <div class="short">
-            <iframe width="500" height="750" src="https://www.youtube.com/embed/jMOE0zazVMs" 
+            <iframe width="480" height="750" padding="-5px" src="https://www.youtube.com/embed/y-jMyBuU48w" 
             title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write;
             encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
