--- a/src/views/ejercicios.ejs
+++ b/src/views/ejercicios.ejs
@@ -131,7 +131,7 @@
      
           <a href="/ejercicios/respiracion"> <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1655489715/Por%20Ti/Ejercicio-fondo-respiracion2_qnjx2i.png);"><div class="card-ejercicio-text">
             <h2>Técnicas de respiración</h2><h6>12 min</h6>
-            <div class="h4-card-text"><h4>Reduce el estrés y ansiedad usando la respiración.</h4></div></div></div>
+            <div class="h4-ben-text"><h4>Reduce el estrés y ansiedad usando la respiración.</h4></div></div></div>
           </a>
 
           <a href="/ejercicios/tapping"><div class="box"><div class="card-ejercicio-text">
@@ -221,7 +221,7 @@
 
             <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651866646/Por%20Ti/card-company-ejercicio_qipewp.png);"><div class="card-ejercicio-text">
               <h2>Actividades en compañia</h2><h6>12 min</h6>
-              <div class="h4-card-text"><h4>Mantén buenos hábitos sociales.</h4>
+              <div class="h4-ben-text"><h4>Mantén buenos hábitos sociales.</h4>
               <h4>Conecta con los demás.</h4></div></div></div>
            
     </div>
