--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -16,7 +16,7 @@
                 <a href="facebook">
                     <img class="redes" src = '/img/facebook.png' alt='facebook'>
                 </a>
-                <a href="www.instagram.com/porti.saludintegral/?hl=es">
+                <a href="./www.instagram.com/porti.saludintegral/?hl=es">
                     <img class="redes" src = '/img/insta.png' alt='instagram'>
                 </a> 
         
