--- a/src/views/perfil.ejs
+++ b/src/views/perfil.ejs
@@ -98,7 +98,7 @@
         <a href="/ejercicios/respiracion"> <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1655489715/Por%20Ti/Ejercicio-fondo-respiracion2_qnjx2i.png);">
             <div class="card-ejercicio-text">
           <h2>Técnicas de respiración</h2><h6>12 min</h6>
-          <div class="h4-card-text"><h4>Reduce el estrés y ansiedad usando la respiración.</h4></div>
+          <div class="h4-ben-text"><h4>Reduce el estrés y ansiedad usando la respiración.</h4></div>
         </div></div>
         </a>
 
