--- a/src/public/css/home.css
+++ b/src/public/css/home.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+body{
+    width: 100%;
+}
+
 h1{
     font-family: 'Poppins', sans-serif;
     font-size: 52px;
@@ -227,3 +231,37 @@ margin-bottom:  25px;
     align-self: left;
 }
 
+@media (max-width: 768px){
+    /* Tablets */
+    .content{
+        flex-direction: column;
+    }
+
+    .beneficios{
+        text-align: center;
+    }
+
+    .flexbox{
+        flex-direction: column; 
+        justify-content: center;
+    }
+}
+
+@media (max-width: 460px){
+    /* Smartphones */
+    .content{
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .beneficios{
+        text-align: center;
+        margin: 0 auto;
+        align-self: center;
+    }
+
+    .flexbox{
+        flex-direction: column; 
+        justify-content: center;
+    }
+}
