Correcciones en front de inicio

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -79,7 +79,7 @@
 
     <!--Estrellas-->   
 
-            <div class="scene" style="height: 1800px; margin-bottom: -15px;">
+            <div class="scene" style="height: 100%; margin-bottom: -15px; padding-left: 20px;">
                 <script type="text/javascript">
                     function stars(){
                         let count = 200;
@@ -137,8 +137,8 @@
   <div class="benefits col-xs-10 col-sm-10 col-md-5 align-self-md-center col-lg-3">
     <img class="ben-img img-responsive" src="/img/ventaja3.png" alt="Card image cap">
     <div class="ben-body">
-      <p class="ben-text">Contenido para</p>
-      <h5 class="ben-title">sentirte mejor</h5>
+      <p class="ben-text">Lleva un registro de</p>
+      <h5 class="ben-title">tus avances</h5>
     </div>
   </div>
 
@@ -175,7 +175,7 @@
       <span class="fa fa-star checked"></span>
       <span class="fa fa-star checked"></span>
       <h4 style="font-size: 18px; font-weight: 400; text-align: left; margin-top: 25px; margin-bottom: 35px; padding-right: 25px;">
-        "Me inspira tranquilidad y relajación. Las actividades y menús son intuitivos, fácil de usar. Me parece muy completo."</h4>
+        "Me inspira tranquilidad y relajación. Las actividades son fáciles de usar. Me parece muy completo."</h4>
       <h6>- Giovana Tomasini</h6>
     </div>
           </div>
@@ -205,15 +205,11 @@
   <div class="quienes-somos-cont">
     <img src="/img/img-quienes-somos.png" class="quienes-somos">
     <img src="/img/img-quienes-somos.png" class="quienes-somos">
-<p style="padding: 0 25px;">Buscamos ayudar a mejorar tu calidad de vida, promoviendo el autocuidado y bienestar de tu salud integral.</p>
-</div>
-    </main>
- </div>
+<p style="padding: 0 25px;; margin-bottom: 100px;">Buscamos ayudar a mejorar tu calidad de vida, promoviendo el autocuidado y bienestar de tu salud integral.</p>
 </div>
 </div>
-
-  <%- include('./partials/footer2') %>  
-
+<%- include('./partials/footer2') %>
+</main>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
