--- a/src/views/listado.ejs
+++ b/src/views/listado.ejs
@@ -10,11 +10,13 @@
       <link rel="shortcut icon" type="image/png" href="/img/favicon.png">
       
      <!--CSS--> 
-     <link rel="stylesheet" href="/css/navbar.css" type="text/css">
      <link rel="stylesheet" href="/css/listado.css" type="text/css">
      <link rel="stylesheet" href="/css/fondo.css" type="text/css">
       <!--Kit FontAwesome--> 
       <script src="https://kit.fontawesome.com/60756a3678.js" crossorigin="anonymous"></script>
+
+      <!--BOOTSTRAP INICIAL-->
+      <%- include('./partials/bootstrap') %>
 </head>
 
 <%- include('./partials/nav') %>
@@ -95,6 +97,9 @@
 <head>
   <link rel="stylesheet" href="/css/footer.css" type="text/css">
 </head>
+
+  <!--BOOTSTRAP FINAL-->
+  <%- include('./partials/bootstrapjs') %>
 
 <footer style="padding:40px 40px">
   <!--Logo Fun N Skate-->
