--- a/src/public/css/estilosindex.css
+++ b/src/public/css/estilosindex.css
@@ -2,11 +2,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Fredoka:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
     
-html,html *{box-sizing: border-box !important;}
+html,html *{
+    box-sizing: border-box !important;
+}
 
 header{
     width: 100%;
-    min-height: 100vh;
     background-image: linear-gradient(180deg, rgb(9, 8, 35) -52%, rgb(19, 22, 45) 0%, rgba(68,137,196,0.05228028711484589) 49%, #4489c400 100%), url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1650499717/Por%20Ti/fondo-login_kfumtl.png);
     background-repeat: no-repeat;
     background-position: center;
@@ -17,7 +18,6 @@ header{
 header::before{
     content: '';
     width: 100%;
-    min-height: 100vh;
     position: absolute;
     top: 0;
     left: 0;
@@ -126,7 +126,7 @@ header::before{
     }
 
     .navcont{
-        background-color: rgb(19,33,45)!important;
+        background-color:rgb(19, 22, 45)!important;
         top: 0;
         padding-bottom: 25px;
         padding-top: 25px;
@@ -318,6 +318,7 @@ font-size: 4em;
     color: white;
     font-size: 0.9em;
     padding-top: 25px;
+    height: fit-content;
 }
 
 .ben-body{
