--- a/src/views/partials/footer2.ejs
+++ b/src/views/partials/footer2.ejs
@@ -10,7 +10,7 @@
   <div class="row align-items-center">
     <div class="col-sm-2">
     <ul class="social-icons">
-      <li><a class="dribble" href="#"><i class="fa fa-instagram"></i></a></li>
+      <li><a class="instagram" href="#"><i class="fa fa-instagram"></i></a></li>
       <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
     </ul>
   </div>
