--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -1,26 +1,37 @@
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale-1">
-    <title>Inicio
-    </title>
-      <!--CSS--> 
-      <link rel="stylesheet" href="/css/home.css" type="text/css">
-      <link rel="stylesheet" href="/css/navbar.css" type="text/css">
-      <link rel="stylesheet" href="/css/fondo.css" type="text/css">
-  
-      <!--Tipografías--> 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-       <!--Poppins--> 
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-     <!--Nunito--> 
-     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-      <!--Kit FontAwesome--> 
-     <script src="https://kit.fontawesome.com/60756a3678.js" crossorigin="anonymous"></script>
-    </head>
+  <link rel="stylesheet" href="/css/estilosindex.css" type="text/css">
+</head>
+
+<header>
+      <div class="bg-dark">
+       <div class="container navcont w-100" id="nav-gradient">
+           <nav class="navbar navbar-expand-lg navbar-dark">
+               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                 <span class="navbar-toggler-icon"></span>
+               </button>
+
+               
+               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                   <div class="navbar-nav w-100">
+                       <a class="navbar-brand" href="/"><img src="/img/Logo_Horizontal.png" id="logo-menu2" alt="logo" height="50px"></img></a>
+                   </div>
+                 </div>
+
+               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                 <div class="navg navbar-nav w-100">
+                    <a class="navbar-brand" href="/"><img src="/img/Logo_Horizontal.png" id="logo-menu" alt="logo" height="50px"></img></a>
+                    <% if(locals.isLogged) { %>
+                    <a class="nav-item nav-link" href="/listado">Contactos</a>
+                   <a class="nav-item nav-link" href="/users/misejercicios">Mis ejercicios</a>
+                   <a class="nav-item nav-link" href="/users/miperfil">¡Hola <b><%= locals.userLogged.first_name %></b>!</a>
+                   <% } else { %>
+                     <a class="nav-item nav-link" href="/listado">Contactos</a>
+                     <a class="nav-item nav-link" href="/users/login">Iniciar sesión</a>
+                     <a class="nav-item nav-link" href="/users/registro">Registrate</a>
+                     <% } %>
+                 </div>
+               </div>
+             </nav>
+       </div>
+      </div>
+</header>
