--- a/src/views/partials/nav.ejs
+++ b/src/views/partials/nav.ejs
@@ -1,24 +1,38 @@
- <!--Menu-->
- <div class="nav-gradient">
-    <a href="/"><img src="/img/Logo_Horizontal.png" id="logo-menu"></img></a>
-    <nav id="primary_nav_wrap">
-        <ul>
-          <% if(locals.isLogged) { %>
-            <li><a href="/listado">Contactos</a></li>
-            <li class="current-menu-item"><a href="/users/misejercicios">Mis ejercicios</a></li>
-            <li><a href="/users/miperfil">¡Hola <b><%= locals.userLogged.first_name %></b>!</a>
-                  </ul>
-                </li>
-            </li>
-          </ul>
-            <% } else { %>
-              <li><a href="/listado">Contactos</a>
-              <li><a href="/users/login">Iniciar sesión</a>
-                      <li><a href="/users/registro">Registrate</a></li>
-                    </ul>
-                  </li>
-              </li>
-            </ul>
-              <% } %>
-        </nav>
-    </div>
+<head>
+  <link rel="stylesheet" href="/css/estilosindex.css" type="text/css">
+</head>
+
+
+<header>
+  <div class="bg-dark">
+   <div class="container navcont w-100" id="nav-gradient">
+       <nav class="navbar navbar-expand-lg navbar-dark">
+           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+             <span class="navbar-toggler-icon"></span>
+           </button>
+
+           
+           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+               <div class="navbar-nav w-100">
+                   <a class="navbar-brand" href="/"><img src="/img/Logo_Horizontal.png" id="logo-menu2" alt="logo" height="50px"></img></a>
+               </div>
+             </div>
+
+           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+             <div class="navg navbar-nav w-100">
+                <a class="navbar-brand" href="/"><img src="/img/Logo_Horizontal.png" id="logo-menu" alt="logo" height="50px"></img></a>
+                <% if(locals.isLogged) { %>
+                <a class="nav-item nav-link" href="/listado">Contactos</a>
+               <a class="nav-item nav-link" href="/users/misejercicios">Mis ejercicios</a>
+               <a class="nav-item nav-link" href="/users/miperfil">¡Hola <b><%= locals.userLogged.first_name %></b>!</a>
+               <% } else { %>
+                 <a class="nav-item nav-link" href="/listado">Contactos</a>
+                 <a class="nav-item nav-link" href="/users/login">Iniciar sesión</a>
+                 <a class="nav-item nav-link" href="/users/registro">Registrate</a>
+                 <% } %>
+             </div>
+           </div>
+         </nav>
+   </div>
+  </div>
+</header>
