--- a/src/views/registro2.ejs
+++ b/src/views/registro2.ejs
@@ -70,7 +70,7 @@
 
 <div class="container">
     <div class="row justify-content-md-center">
-    <div class="col-xs-4 col-sm-5 col-lg-7">
+    <div class="col-xs-4 col-sm-5 col-md-7 col-lg-7">
 
  <div class="registro1">
 
@@ -124,9 +124,14 @@
             </div>
 
             <!--Boton-->
+            <div class="padre">
+                <div class="hijo">
             <a href="#objetivos"><button type="button" class="registerbutton" style="text-align:center;">Registrarme</button></a>
-            <p class="p">¿Ya tienes una cuenta? </p>
-              <a href="/users/login" style="margin-top: -20px; text-align:center; left: 40%; right: 40%; position: absolute">Inicia sesión</a>
+        </div>
+        <div>
+            <p class="p" style="margin-top: 60px"><br>¿Ya tienes una cuenta? <br> <a href="/users/login"> <span>Inicia sesión</span></p></a>
+        </div>
+        </div>
         </td>
       </tr>
     </table>
